# Cytochrome_paper_results

./: .gitignore  Readme.md  setup.py
figures/: figure_1.py  figure_3_psv.py  figure_3_ramped.py  figure_4.py  figure_5.py
figures/Experimental_data/DCV/: Trumpet_data.npy
figures/MCMC/: alice_cyt_2_MCMC_PSV_exp_1  nick_cyt_0_MCMC_2_PSV_exp_3  nick_cyt_0_MCMC_PSV_exp_2  trumpet_MCMC_2
src/: CMakeLists.txt
